# foo

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
ci/: travis-before-install.sh  travis-script.sh  travis-system-info.sh
cmake/modules/: AddCatch.cmake
include/: Calculator.hpp  LogFormatter.hpp
include/foo/: Calculator.hpp  FileLogger.hpp
src/: FileLogger.cpp  LogFormatter.cpp
test/: CMakeLists.txt  Calculator_test.cpp
